<resources>
    <string name="app_name">E-Contact</string>
    <string name="recyclerview_empty_text">Oops! Something is wrong. Please check your internet connection and try again.</string>

    <!-- Navigation Drawer Strings -->
    <string name="drawer_title">@string/app_name</string>
    <string name="drawer_item_all">All inquiries</string>
    <string name="drawer_item_map">Inquiries on a map</string>
    <string name="drawer_item_login">Login</string>
    <string name="drawer_footer_links">Made with love\n<a href="http://www.itruh.dp.ua/">IT Ruh Dnipro</a> and <a href="https://yalantis.com/">Yalantis</a></string>

    <!-- Accessibility strings -->
    <string name="fab_description">Create an inquiry</string>
    <string name="image_description_type">Type of the inquiry</string>
    <string name="image_description_like">Thumbs Up image</string>

    <!-- Menu Items -->
    <string name="menu_item_sort">Sort</string>

    <!-- SharedTransitions -->
    <string name="transition_card" translatable="false">card</string>

    <!-- Task Detailed Fragment Strings for the test purposes TODO -->
    <string name="task_title_text">Public utilities</string>
    <string name="task_status">In progress</string>
    <string name="task_created_date">Jan. 27th 2016</string>
    <string name="task_registered_date">Jan. 27th 2016</string>
    <string name="task_assigned_date">Jan. 27th 2016</string>
    <string name="task_responsible_name">Dnipropetrovsk MVK</string>
    <string name="task_description">Open drainage near billboard, close to a turn of 18th and 19th trolleys to the Peace avenue of Donetsk Highway.</string>

    <!-- Task Deatiled View -->
    <string name="task_title">Task: </string>
    <string name="task_created_text">Created </string>
    <string name="task_registered_text">Registered </string>
    <string name="task_assigned_text">Assigned </string>
    <string name="task_responsible_text">Responsible </string>
    <string name="task_image_text">Image: </string>

    <!-- Fragments -->
    <string name="title_inprogress">In progress</string>
    <string name="title_done">Completed</string>
    <string name="title_pending">Waiting</string>

    <!-- AlertDialog with filters -->
    <string name="dialog_title">Show categories:</string>
    <string name="dialog_select_all">Select all</string>
    <string name="dialog_select_none">Clear all</string>
    <string name="dialog_accept">OK</string>
    <!-- TODO Add names and mapping -->
    <string-array name="filter_strings">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
        <item>Option 6</item>
        <item>Option 7</item>
        <item>Option 8</item>
        <item>Option 9</item>
        <item>Option 10</item>
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
        <item>Option 6</item>
        <item>Option 7</item>
        <item>Option 8</item>
        <item>Option 9</item>
        <item>Option 10</item>
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
        <item>Option 6</item>
    </string-array>
    <string name="filter_all" translatable="false">0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25</string>

    <!-- Shared Preferences Keys -->
    <string name="sharedprefs_selection" translatable="false">selection</string>



</resources>
