<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016. Dmytro Karataiev
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_default"
    android:transitionName="@string/transition_card"
    tools:context=".ui.DetailActivity"
    tools:showIn="@layout/activity_detail"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/task_title_text"
            style="@style/TaskNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/task_status"
            android:layout_toStartOf="@+id/task_status"
            android:text="@string/task_title_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/task_status"
            style="@style/StatusSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/toolbar"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_oval"
            android:text="@string/task_status" />

    </RelativeLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/task_title"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/task_created_text"
        style="@style/TaskNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/divider1"
        android:text="@string/task_created_text" />

    <TextView
        android:id="@+id/task_created_date"
        style="@style/TaskDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divider1"
        android:text="@string/task_created_date" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/task_created_text"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/task_registered_text"
        style="@style/TaskNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/divider2"
        android:text="@string/task_registered_text" />

    <TextView
        android:id="@+id/task_registered_date"
        style="@style/TaskDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divider2"
        android:text="@string/task_registered_date" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/task_registered_text"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/task_assigned_text"
        style="@style/TaskNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/divider3"
        android:text="@string/task_assigned_text" />

    <TextView
        android:id="@+id/task_assigned_date"
        style="@style/TaskDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divider3"
        android:text="@string/task_assigned_date" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/task_assigned_text"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/task_responsible_text"
        style="@style/TaskNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/divider4"
        android:text="@string/task_responsible_text" />

    <TextView
        android:id="@+id/task_responsible_name"
        style="@style/TaskDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divider4"
        android:layout_toEndOf="@+id/task_responsible_text"
        android:layout_toRightOf="@+id/task_responsible_text"
        android:gravity="end"
        android:text="@string/task_responsible_name" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/task_responsible_name"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/task_description"
        style="@style/TaskNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/divider5"
        android:text="@string/task_description" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_description"
        android:minHeight="@dimen/recycler_minheight"
        android:paddingTop="@dimen/recycler_padding"
        android:scrollbars="horizontal" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerview"
        android:text="@string/button_map"
        android:visibility="gone" />

</RelativeLayout>

